[project]
name = "start-message-bot"
version = "0.1.0"
description = "Telegram bot that sends a configurable welcome message (text + optional photo/video + inline buttons) on /start, fully editable from within Telegram"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handlers"]
